--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.10",
     "morgan": "^1.10.0",
     "prisma": "^4.7.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   }
